--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Prata&family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Antic+Didone&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -7,13 +8,20 @@
 }
 
 body {
-  font-family: 'Prata', serif;
+  font-family: 'Antic Didone', serif;
+  font-weight: 300;
   color: #FFFFFF;
   background-color: black;
 }
 
 .container {
   padding: 3.62rem 7.18rem;
+}
+
+@media (max-width: 1098px) {
+  .container {
+    padding: 3rem 1rem;
+  }
 }
 
 .container .menu {
@@ -42,6 +50,30 @@ body {
   gap: 5.18rem;
 }
 
+@media (max-width: 1098px) {
+  .container .menu_nav {
+    background-color: #1A1A1A;
+    background: transparent;
+    -webkit-backdrop-filter: blur(40px);
+            backdrop-filter: blur(40px);
+    --webkit-backdrop-filter: blur(40px);
+    background-color: rgba(0, 0, 0, 0.05);
+    position: absolute;
+    left: 0;
+    width: 20rem;
+    bottom: 0;
+    top: 5rem;
+    z-index: 1000;
+    padding: 3rem 1rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-transform: translateX(-20rem);
+            transform: translateX(-20rem);
+  }
+}
+
 .container .menu_nav_item {
   height: 1rem;
   opacity: 0.7;
@@ -64,6 +96,13 @@ body {
   opacity: 1;
 }
 
+@media (max-width: 1098px) {
+  .container .menu_nav .active::after {
+    margin: initial;
+    margin-top: 0.5rem;
+  }
+}
+
 .container .menu_icons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -75,6 +114,27 @@ body {
   width: 2rem;
   height: 2rem;
   opacity: 0.7;
+}
+
+@media (max-width: 1098px) {
+  .container .menu_icons_icon:nth-child(-n+4) {
+    display: block;
+    position: absolute;
+    left: 1rem;
+    top: 27rem;
+    z-index: 2000;
+    -webkit-transform: translateX(-20rem);
+            transform: translateX(-20rem);
+  }
+  .container .menu_icons_icon:nth-child(2) {
+    left: 5rem;
+  }
+  .container .menu_icons_icon:nth-child(3) {
+    left: 9rem;
+  }
+  .container .menu_icons_icon:nth-child(4) {
+    display: none;
+  }
 }
 
 .container .menu_icons_icon:hover {
@@ -93,6 +153,25 @@ body {
   width: 2px !important;
 }
 
+.container .menuopen .menu_nav {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+@media (max-width: 1098px) {
+  .container .menuopen .menu_nav {
+    -webkit-transform: translateX(0rem);
+            transform: translateX(0rem);
+  }
+}
+
+.container .menuopen .menu_icons_icon:nth-child(-n+4) {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-transform: translateX(0rem);
+          transform: translateX(0rem);
+}
+
 .container .hero {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -101,6 +180,21 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 4.06rem;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+}
+
+@media (max-width: 728px) {
+  .container .hero {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: left;
+        -ms-flex-align: left;
+            align-items: left;
+  }
 }
 
 .container .hero_info {
@@ -112,6 +206,14 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 3rem;
+  position: relative;
+  min-width: 27rem;
+}
+
+@media (max-width: 1098px) {
+  .container .hero_info {
+    min-width: 21rem;
+  }
 }
 
 .container .hero_info_subtitle {
@@ -121,8 +223,42 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+@media (max-width: 1098px) {
+  .container .hero_info_subtitle {
+    font-size: 0.8rem;
+  }
+}
+
 .container .hero_info_title {
   font-size: 4rem;
+  line-height: 5.5rem;
+  letter-spacing: 4px;
+}
+
+@media (max-width: 1098px) {
+  .container .hero_info_title {
+    font-size: 3rem;
+    line-height: 4.5rem;
+  }
+}
+
+.container .hero_info_title::before {
+  content: url(../src/icons/linetext.svg);
+  width: 20rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 7rem;
+  left: 5.5rem;
+}
+
+@media (max-width: 1098px) {
+  .container .hero_info_title::before {
+    width: 14rem;
+    top: 6rem;
+    right: 1rem;
+  }
 }
 
 .container .hero_info_btns {
@@ -135,12 +271,32 @@ body {
           align-items: center;
 }
 
+@media (max-width: 1098px) {
+  .container .hero_info_btns {
+    gap: 2rem;
+  }
+}
+
 .container .hero_info_btns .btn-getstarted {
   border: none;
   background-color: #daa9da;
   font-family: 'Prata', serif;
   padding: 1.8rem 3.8rem;
   font-size: 1rem;
+  background-image: url(https://us.123rf.com/450wm/rawpixel/rawpixel1901/rawpixel190100161/126452991-dise%C3%B1o-de-fondo-degradado-hologr%C3%A1fico-colorido.jpg?ver=6);
+  background-position: center;
+  background-size: cover;
+}
+
+@media (max-width: 1098px) {
+  .container .hero_info_btns .btn-getstarted {
+    padding: 1rem 2rem;
+  }
+}
+
+.container .hero_info_btns .btn-getstarted:hover {
+  cursor: pointer;
+  background-position-x: -10px;
 }
 
 .container .hero_info_btns .btn-watchvideo {
@@ -175,6 +331,10 @@ body {
   border: solid 1px #FFFFFF;
 }
 
+.container .hero_info_btns .btn-watchvideo .iconplay i {
+  font-size: 0.8rem;
+}
+
 .container .hero_info_additional {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -182,11 +342,20 @@ body {
   gap: 3.4rem;
 }
 
-.container .hero_info_additional .line {
+@media (max-width: 1098px) {
+  .container .hero_info_additional {
+    gap: 2rem;
+  }
+}
+
+.container .hero_info_additional .line2 {
   background-color: #FFFFFF;
-  height: 100%;
+  height: 6.5rem;
   width: 1.5px;
   opacity: 0.7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .container .hero_info_additional h2 {
@@ -202,11 +371,129 @@ body {
 }
 
 .container .hero_img {
-  width: 40rem;
+  width: 42.2rem;
   height: 42.18rem;
-  background-image: url("../src/spacejoy-unsplash.jpeg");
+  background-image: url("../src/spacejoy-unsplash.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+@media (max-width: 1098px) {
+  .container .hero_img {
+    width: 22rem;
+    height: 22rem;
+    margin-top: 1rem;
+  }
+}
+
+.container .benefits {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin-top: 10rem;
+}
+
+@media (max-width: 1098px) {
+  .container .benefits {
+    margin-top: 5rem;
+  }
+}
+
+.container .benefits_title {
+  font-size: 4rem;
+}
+
+@media (max-width: 1098px) {
+  .container .benefits_title {
+    font-size: 3rem;
+    text-align: left;
+  }
+}
+
+.container .benefits_subtitle {
+  color: #FFFFFF;
+  opacity: 0.7;
+  letter-spacing: 1.5px;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 1rem;
+}
+
+@media (max-width: 1098px) {
+  .container .benefits_subtitle {
+    text-align: left;
+    line-height: 1.5rem;
+  }
+}
+
+.container .benefits_items {
+  margin-top: 6rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.5rem;
+}
+
+@media (max-width: 1098px) {
+  .container .benefits_items {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    margin-top: 3rem;
+  }
+}
+
+@media (max-width: 728px) {
+  .container .benefits_items {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.container .benefits_items_item {
+  background-color: #1A1A1A;
+  padding: 2rem;
+}
+
+.container .benefits_items_item_icon {
+  background-color: #5F5F5F;
+  width: 2rem;
+  height: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10rem;
+  font-size: 0.8rem;
+  margin: auto;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 1098px) {
+  .container .benefits_items_item_icon {
+    width: 3rem;
+    height: 3rem;
+    font-size: 1.2rem;
+  }
+}
+
+.container .benefits_items_item_title {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.container .benefits_items_item_paragraph {
+  color: #5F5F5F;
+  letter-spacing: 1.5px;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  line-height: 1.3rem;
 }
 /*# sourceMappingURL=styles.css.map */
