--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,164 +1,315 @@
 @import "variables";
 
 * {
-    margin: 0;
-    padding: 0;
+    margin    : 0;
+    padding   : 0;
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Prata', serif;
-    color: $White;
+    font-family     : 'Antic Didone', serif;
+    font-weight     : 300;
+    color           : $White;
     background-color: black;
-    // font-family: 'Roboto', sans-serif;
 }
 
 
-.container{
+.container {
     padding: 3.62rem 7.18rem;
 
-    .menu{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    @media (max-width: $breakpoint-medium) {
+        padding: 3rem 1rem;
+    }
 
-        &_logo{
-            h1{
-                font: 2.26rem;
-                background: -webkit-linear-gradient(45deg, $Blue, $Rosa);
+
+
+    .menu {
+        display        : flex;
+        justify-content: space-between;
+        align-items    : center;
+
+        &_logo {
+            h1 {
+                font                   : 2.26rem;
+                background             : -webkit-linear-gradient(45deg, $Blue, $Rosa);
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
             }
         }
 
-        &_nav{
+        &_nav {
             display: flex;
-            gap: 5.18rem;
+            gap    : 5.18rem;
 
-            &_item{
-                height: 1rem;
+            @media (max-width: $breakpoint-medium) {
+                background-color: $GrayBlack;
+
+                background              : transparent;
+                backdrop-filter         : blur(40px);
+                --webkit-backdrop-filter: blur(40px);
+                background-color        : rgba(0, 0, 0, 0.05);
+
+                position: absolute;
+                left    : 0;
+                width   : 20rem;
+                bottom  : 0;
+                top     : 5rem;
+                z-index : 1000;
+                padding : 3rem 1rem;
+
+                flex-direction: column;
+
+                transform: translateX(-20rem);
+            }
+
+            &_item {
+                height : 1rem;
                 opacity: 0.7;
 
-                &:hover{
+                &:hover {
                     opacity: 1;
-                    cursor: pointer;
+                    cursor : pointer;
                 }
             }
-            .active{
-                &::after{
-                    content: '';
-                    width: 0.5rem;
-                    height: 2px;
+
+            .active {
+                &::after {
+                    content         : '';
+                    width           : 0.5rem;
+                    height          : 2px;
                     background-color: $White;
-                    display: flex;
-                    margin: auto;
-                    opacity: 1;
+                    display         : flex;
+                    margin          : auto;
+                    opacity         : 1;
+
+                    @media (max-width: $breakpoint-medium) {
+                        margin    : initial;
+                        margin-top: 0.5rem;
+                    }
                 }
             }
         }
-        &_icons{
+
+        &_icons {
             display: flex;
-            gap: 2.81rem;
-            &_icon{
-                width: 2rem;
-                height: 2rem;
+            gap    : 2.81rem;
+
+
+
+            &_icon {
+                width  : 2rem;
+                height : 2rem;
                 opacity: 0.7;
 
-                &:hover{
+                @media (max-width: $breakpoint-medium) {
+
+                    
+                    
+                    &:nth-child(-n+4) {
+                        display: block;
+                        position: absolute;
+                        left: 1rem;
+                        top: 27rem;
+                        z-index: 2000;
+                        transform: translateX(-20rem);
+                    }
+
+                    &:nth-child(2) {
+                       left: 5rem;
+                    }
+
+                    &:nth-child(3) {
+                        left: 9rem;
+                    }
+
+                    &:nth-child(4) {
+                        display: none;
+                    }
+                }
+
+                &:hover {
                     opacity: 1;
-                    cursor: pointer;
+                    cursor : pointer;
                 }
 
-                .line{
+                .line {
                     background-color: $White;
-                    height: 100%;
-                    width: 2px;
-                    opacity: 0.7
+                    height          : 100%;
+                    width           : 2px;
+                    opacity         : 0.7
                 }
 
-                &:nth-child(4){
-                    width: 2px !important;  
+                &:nth-child(4) {
+                    width: 2px !important;
                 }
-            }   
+            }
         }
     }
 
-    .hero{
-        display: flex;
+    .menuopen {
+
+        .menu_nav {
+            transition: all 0.5s ease-in-out;
+            @media (max-width: $breakpoint-medium) {
+                transform: translateX(0rem);
+            }
+        }
+
+        .menu_icons_icon:nth-child(-n+4) {
+            transition: all 0.5s ease-in-out;
+            transform: translateX(0rem);
+        }
+        
+
+    }
+
+    .hero {
+        display        : flex;
         justify-content: space-between;
-        margin-top: 4.06rem;
+        margin-top     : 4.06rem;
+        align-items    : left;
 
-        &_info{
-            display: flex;
+        @media (max-width: $breakpoint-small) {
             flex-direction: column;
-            gap: 3rem;
+            align-items   : left;
+        }
 
-            &_subtitle{
-                color: $White;
-                opacity: 0.7;
+
+
+        &_info {
+            display       : flex;
+            flex-direction: column;
+            gap           : 3rem;
+            position      : relative;
+            min-width     : 27rem;
+
+            @media (max-width: $breakpoint-medium) {
+                min-width: 21rem;
+            }
+
+            &_subtitle {
+                color         : $White;
+                opacity       : 0.7;
                 letter-spacing: 1.5px;
-                font-family: 'Roboto', sans-serif;
+                font-family   : 'Roboto', sans-serif;
+
+                @media (max-width: $breakpoint-medium) {
+                    font-size: 0.8rem;
+                }
             }
 
-            &_title{
-                font-size: 4rem;
+            &_title {
+                font-size     : 4rem;
+                line-height   : 5.5rem;
+                letter-spacing: 4px;
+
+                @media (max-width: $breakpoint-medium) {
+                    font-size  : 3rem;
+                    line-height: 4.5rem;
+                }
+
+                &::before {
+                    content : url(../src/icons/linetext.svg);
+                    width   : 20rem;
+                    display : flex;
+                    position: absolute;
+                    top     : 7rem;
+                    left    : 5.5rem;
+
+                    @media (max-width: $breakpoint-medium) {
+                        width: 14rem;
+                        top  : 6rem;
+                        right: 1rem;
+                    }
+                }
             }
 
-            &_btns{
 
-                display: flex;
-                gap: 3rem;
+
+            &_btns {
+
+                display    : flex;
+                gap        : 3rem;
                 align-items: center;
 
-                .btn-getstarted{
-                    border: none;
-                    background-color: $Rosa;
-                    font-family: 'Prata', serif;
-                    padding: 1.8rem 3.8rem;
-                    font-size: 1rem;
+                @media (max-width: $breakpoint-medium) {
+                    gap: 2rem;
                 }
-                .btn-watchvideo{
-                    display: flex;
-                    align-items: center;
-                    gap: 1rem;
-                    .iconplay{
-                        width: 3rem;
-                        height: 3rem;
-                        border-radius: 10rem;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        padding-left: 1px;
-                        border: dashed $White 1px;
 
-                        &:hover{
+                .btn-getstarted {
+                    border             : none;
+                    background-color   : $Rosa;
+                    font-family        : 'Prata', serif;
+                    padding            : 1.8rem 3.8rem;
+                    font-size          : 1rem;
+                    background-image   : url(https://us.123rf.com/450wm/rawpixel/rawpixel1901/rawpixel190100161/126452991-dise%C3%B1o-de-fondo-degradado-hologr%C3%A1fico-colorido.jpg?ver=6);
+                    background-position: center;
+                    background-size    : cover;
+
+                    @media (max-width: $breakpoint-medium) {
+                        padding: 1rem 2rem;
+                    }
+
+                    &:hover {
+                        // filter: saturate(0.7);
+                        cursor               : pointer;
+                        background-position-x: -10px;
+
+                    }
+                }
+
+                .btn-watchvideo {
+                    display    : flex;
+                    align-items: center;
+                    gap        : 1rem;
+
+                    .iconplay {
+                        width          : 3rem;
+                        height         : 3rem;
+                        border-radius  : 10rem;
+                        display        : flex;
+                        justify-content: center;
+                        align-items    : center;
+                        padding-left   : 1px;
+                        border         : dashed $White 1px;
+
+                        &:hover {
                             cursor: pointer;
                             border: solid 1px $White;
+                        }
+
+                        i {
+                            font-size: 0.8rem;
                         }
                     }
                 }
             }
 
-            &_additional{
+            &_additional {
                 display: flex;
-                gap: 3.4rem;
+                gap    : 3.4rem;
 
-                .line{
+                @media (max-width: $breakpoint-medium) {
+                    gap: 2rem;
+                }
+
+                .line2 {
                     background-color: $White;
-                    height: 100%;
-                    width: 1.5px;
-                    opacity: 0.7;
+                    height          : 6.5rem;
+                    width           : 1.5px;
+                    opacity         : 0.7;
+                    display         : flex;
                 }
 
-                h2{
-                    font-size: 2.5rem;
+                h2 {
+                    font-size    : 2.5rem;
                     margin-bottom: 1rem;
-                    margin-top: 0.5rem;
+                    margin-top   : 0.5rem;
                 }
 
-                p{
-                    opacity: 0.7;
-                    font-family: 'Roboto', sans-serif;
+                p {
+                    opacity      : 0.7;
+                    font-family  : 'Roboto', sans-serif;
                     margin-bottom: 0.5rem;
                 }
 
@@ -166,13 +317,105 @@ body {
 
         }
 
-        &_img{
-            width: 40rem;
-            height: 42.18rem;
-            background-image: url("../src/spacejoy-unsplash.jpeg");
+        &_img {
+            width              : 42.2rem;
+            height             : 42.18rem;
+            background-image   : url("../src/spacejoy-unsplash.png");
             background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
+            background-repeat  : no-repeat;
+            background-size    : cover;
+
+            @media (max-width: $breakpoint-medium) {
+                width     : 22rem;
+                height    : 22rem;
+                margin-top: 1rem;
+            }
+        }
+    }
+
+    .benefits {
+        align-items: center;
+        text-align : center;
+        margin-top : 10rem;
+
+        @media (max-width: $breakpoint-medium) {
+            margin-top: 5rem;
+        }
+
+        &_title {
+            font-size: 4rem;
+
+            @media (max-width: $breakpoint-medium) {
+                font-size : 3rem;
+                text-align: left;
+            }
+        }
+
+        &_subtitle {
+            color         : $White;
+            opacity       : 0.7;
+            letter-spacing: 1.5px;
+            font-family   : 'Roboto', sans-serif;
+            margin-top    : 1rem;
+
+            @media (max-width: $breakpoint-medium) {
+                text-align : left;
+                line-height: 1.5rem;
+            }
+        }
+
+        &_items {
+            margin-top           : 6rem;
+            display              : grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap                  : 1.5rem;
+
+            @media (max-width: $breakpoint-medium) {
+                grid-template-columns: 1fr 1fr;
+                margin-top           : 3rem;
+            }
+
+            @media (max-width: $breakpoint-small) {
+                grid-template-columns: 1fr;
+            }
+
+            &_item {
+                background-color: $GrayBlack;
+                padding         : 2rem;
+
+                &_icon {
+                    background-color: $Gray;
+                    width           : 2rem;
+                    height          : 2rem;
+                    display         : flex;
+                    justify-content : center;
+                    align-items     : center;
+                    border-radius   : 10rem;
+                    font-size       : 0.8rem;
+                    margin          : auto;
+                    margin-bottom   : 1rem;
+
+                    @media (max-width: $breakpoint-medium) {
+                        width    : 3rem;
+                        height   : 3rem;
+                        font-size: 1.2rem;
+                    }
+                }
+
+                &_title {
+                    font-size    : 1.2rem;
+                    margin-bottom: 1rem;
+                }
+
+                &_paragraph {
+                    color         : $Gray;
+                    letter-spacing: 1.5px;
+                    font-family   : 'Roboto', sans-serif;
+                    margin-top    : 1rem;
+                    font-size     : 0.8rem;
+                    line-height   : 1.3rem;
+                }
+            }
         }
     }
 }
