--- a/scss/styles.css
+++ b/scss/styles.css
@@ -180,9 +180,9 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-top: 4.06rem;
-  -webkit-box-align: left;
-      -ms-flex-align: left;
-          align-items: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (max-width: 728px) {
@@ -191,9 +191,9 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: left;
-        -ms-flex-align: left;
-            align-items: left;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 }
 
