--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -167,11 +167,11 @@ body {
         display        : flex;
         justify-content: space-between;
         margin-top     : 4.06rem;
-        align-items    : left;
+        align-items    : center;
 
         @media (max-width: $breakpoint-small) {
             flex-direction: column;
-            align-items   : left;
+            align-items   :flex-start
         }
 
 
